--- a/posts/cmake/CMakeLists.txt
+++ b/posts/cmake/CMakeLists.txt
@@ -1,7 +1,20 @@
 
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
-project(cmake_and_cuda LANGUAGES CXX CUDA)
+##project(cmake_and_cuda LANGUAGES CXX CUDA)
+set(CMAKE_CUDA_COMPILER  /usr/local/cuda-10.1/bin/nvcc)
 
+project(cmake_and_cuda)
+include(FindCUDA)
+
+set(CMAKE_CXX_STANDARD 14)
+##find_package( OpenCV REQUIRED )
+find_package(CUDA REQUIRED)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_30,code=sm_30)
+
+##include_directories( ${OpenCV_INCLUDE_DIRS} )
+
+##cuda_add_executable(train train.cu)
+##target_link_libraries( train ${OpenCV_LIBS} )
 include(CTest)
 
 add_library(particles STATIC
